--- a/content-edit/.obsidian/workspace
+++ b/content-edit/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "442b32bc8cb03914",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_index.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ],
@@ -69,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "_index.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,13 +84,13 @@
   },
   "active": "442b32bc8cb03914",
   "lastOpenFiles": [
+    "Blender/Blender资源.md",
     "_index.md",
     "建模/未命名.md",
     "建模/水平线.md",
     "建模/创建笔记.md",
     "VRChat/VRChat资源.md",
     "VRChat/VRChat.md",
-    "Blender/Blender资源.md",
     "Blender/未命名.md",
     "english/manulLinkedList.md",
     "english/EngNote1.md"
